fix: fix some margins and aligns in feed section

--- a/online-zoo/assets/styles/donate_base.scss
+++ b/online-zoo/assets/styles/donate_base.scss
@@ -715,8 +715,9 @@ border-image-slice: 1; */
     }
 
     .container .pick-friend-box {
+        
         margin: 0 auto;
-        text-align: center;
+       /*  text-align: center; */
         height: 964px;
 
         margin-bottom: 40px;
@@ -728,10 +729,14 @@ border-image-slice: 1; */
 
         p {
             margin: auto;
+            
             font-weight: 400;
             font-size: 16px;
             line-height: 140%;
             color: #333B41;
+        }
+        .last {
+            text-align: center;
         }
 
         h2 {
@@ -773,6 +778,7 @@ border-image-slice: 1; */
                 color: #333B41;
                 margin-bottom: 1.70em;
                 margin-left: -7px;
+                
             }
 
             p {
@@ -873,10 +879,10 @@ border-image-slice: 1; */
 
 .donate-input-box {
     width: 100%;
-    height: 185px;
+    /* height: 185px; */
     margin-bottom: 30px;
 
-    form {
+    form {position:relative;
         display: block;
         text-align: center;
         padding-top: 8px;
@@ -891,10 +897,11 @@ input[type="number"]::-webkit-inner-spin-button {
 
         input[type=number] {
             display: block;
-            padding: auto 10px auto 9px;
+            padding: 0 10px 0 9px;
+            
             width: 268px;
             height: 54px;
-            margin: auto;
+            margin: 0px 15px 25px 15px;
             margin-bottom: 25px;
             border: 1px solid #929699;
             background: #FFFFFF;
@@ -914,11 +921,16 @@ input[type="number"]::-webkit-inner-spin-button {
             font-size: 16px;
             line-height: 140%;
             color: #333B41;
-            
+                            
 
 
-             input {
-                margin-right: 10px;
+             input { display:inline-block;
+                vertical-align: middle;
+                margin-right: 7px;
+                margin-bottom:3px;
+                width:16px;
+                height:16px;
+                border: 1px solid #FE9013;
 
                 /* &::-webkit-outer-spin-button,
                 &::-webkit-inner-spin-button {
@@ -931,6 +943,9 @@ input[type="number"]::-webkit-inner-spin-button {
                     -webkit-appearance: none;
                 } */
             }
+            label {
+                vertical-align: middle;
+            }
 
             .month {
                 display: inline-block;
@@ -938,6 +953,7 @@ input[type="number"]::-webkit-inner-spin-button {
             }
 
         }
+       
     }
 
 }
@@ -1436,6 +1452,6 @@ input[type="number"]::-webkit-inner-spin-button {
 
 
 
-* {
+/* * {
     outline: 1px solid red;
-}
+} */
