--- a/online-zoo/pages/donate/style.css
+++ b/online-zoo/pages/donate/style.css
@@ -682,7 +682,7 @@ a {
 }
 .pick-friend .container .pick-friend-box {
   margin: 0 auto;
-  text-align: center;
+  /*  text-align: center; */
   height: 964px;
   margin-bottom: 40px;
   padding-top: 39.84px;
@@ -697,6 +697,9 @@ a {
   font-size: 16px;
   line-height: 140%;
   color: #333B41;
+}
+.pick-friend .container .pick-friend-box .last {
+  text-align: center;
 }
 .pick-friend .container .pick-friend-box h2 {
   text-align: center;
@@ -813,10 +816,11 @@ a {
 
 .donate-input-box {
   width: 100%;
-  height: 185px;
+  /* height: 185px; */
   margin-bottom: 30px;
 }
 .donate-input-box form {
+  position: relative;
   display: block;
   text-align: center;
   padding-top: 8px;
@@ -831,10 +835,10 @@ a {
 }
 .donate-input-box form input[type=number] {
   display: block;
-  padding: auto 10px auto 9px;
+  padding: 0 10px 0 9px;
   width: 268px;
   height: 54px;
-  margin: auto;
+  margin: 0px 15px 25px 15px;
   margin-bottom: 25px;
   border: 1px solid #929699;
   background: #FFFFFF;
@@ -854,7 +858,13 @@ a {
   color: #333B41;
 }
 .donate-input-box form .radio-btns input {
-  margin-right: 10px;
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 7px;
+  margin-bottom: 3px;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #FE9013;
   /* &::-webkit-outer-spin-button,
   &::-webkit-inner-spin-button {
       -webkit-appearance: none;
@@ -865,6 +875,9 @@ a {
       -moz-appearance: textfield;
       -webkit-appearance: none;
   } */
+}
+.donate-input-box form .radio-btns label {
+  vertical-align: middle;
 }
 .donate-input-box form .radio-btns .month {
   display: inline-block;
@@ -1260,8 +1273,8 @@ a {
   color: #4B9200;
 }
 
-* {
-  outline: 1px solid red;
-}
+/* * {
+    outline: 1px solid red;
+} */
 
 /*# sourceMappingURL=style.css.map */
